# learn_placing

./: .gitignore  EXPERIMENT.md  README.md  optitrac_socket.py  optitrac_unicast.py  requirements.txt  setup.py
contact_detection/: README.md  ft_contact_detection.py
data_processing/: 2022-07-27-16-44-18.pkl  bag2pickle.py  bag2pickleTactile.py  data_processing.py  gifs.py  object_hold.pkl  other_architectures.md  preprocess_labels.py  preprocessing.py  tactile_insertion_rl.py  vecplot.py  visualize_orientations.py
data_processing/test_samples/: 2022-08-05.15:24:34.bag  2022-08-05.15:24:34.pkl  2022-08-05.15:24:50.bag  2022-08-05.15:24:50.pkl  2022-08-05.15:25:03.bag  2022-08-05.15:25:03.pkl  2022-08-05.15:25:17.bag  2022-08-05.15:25:17.pkl  2022-08-05.15:25:30.bag  2022-08-05.15:25:30.pkl  2022-08-05.15:26:13.bag  2022-08-05.15:26:13.pkl  2022-08-05.15:26:29.bag  2022-08-05.15:26:29.pkl  2022-08-05.15:26:49.bag  2022-08-05.15:26:49.pkl  2022-08-05.15:27:14.bag  2022-08-05.15:27:14.pkl  2022-08-05.15:27:26.bag  2022-08-05.15:27:26.pkl  2022-08-05.15:27:37.bag  2022-08-05.15:27:37.pkl  2022-08-05.15:27:50.bag  2022-08-05.15:27:50.pkl  2022-08-05.15:28:00.bag  2022-08-05.15:28:00.pkl  2022-08-05.15:28:26.bag  2022-08-05.15:28:26.pkl  2022-08-05.15:28:42.bag  2022-08-05.15:28:42.pkl  2022-08-05.15:29:02.bag  2022-08-05.15:29:02.pkl  2022-08-05.15:29:15.bag  2022-08-05.15:29:15.pkl  2022-08-05.15:29:32.bag  2022-08-05.15:29:32.pkl  2022-08-05.15:29:47.bag  2022-08-05.15:29:47.pkl  2022-08-05.15:29:58.bag  2022-08-05.15:29:58.pkl
execute_placing/: EVALUATION.md  analyze_sample.py  collect_data.py  collect_sequence.py  estimator_placing.py  fake_object_state.py  nn_placing.py  placing_planner.py  run_estimator.py  vision_baseline.py
execute_placing/launch/: tiago_dual.rviz  tiago_dual_test.launch
experiment_manager/: README.md  cm_interface.py  dataset_collection.py
experiment_manager/common/: __init__.py  cm_interface.py  contact_detector.py  torso_controller.py
learn_placing/: __init__.py  bag2pickle.py  gifs.py  learning_methodology.md  preprocess_dataset.py  tactile_insertion_rl.py  trainings.md
learn_placing/analysis/: _paper_plot.py  analysis_new.py  augment_test.py  baseline_eval.py  baseline_trials.py  compare_losses.py  debug_w2o.py  extract_gripper_rot.py  extract_polar_coordinates.py  final_heat.py  ft_lookback.py  hough_trials.py  myrmex_gifs.py  myrmex_lookback.py  myrmex_png.py  myrmex_static_dynamic.py  pca_eval.py  pca_trials.py  plot_grasp_frame_angles.py  test_split_ds.py  test_times.py  verify_input_data.py  visualize_loss.py  (+3 more)
myrmex_gripper_controller/: CMakeLists.txt  README.md  myrmex_gripper_controller_plugins.xml  package.xml
myrmex_gripper_controller/cfg/: MyrmexControllerDR.cfg
myrmex_gripper_controller/config/: myrmex.rviz  myrmex_gripper_controller.yaml  myrmex_gripper_left_controller.yaml  plotjuggler.xml  tiago.rviz
myrmex_gripper_controller/include/myrmex_gripper_controller/: myrmex_gripper_controller.h  myrmex_processor.h
myrmex_gripper_controller/launch/: controller_sim_test.launch  load_myrmex_controller.launch  myrmex_readout.launch  myrmex_viz.launch  start_myrmex.launch
myrmex_gripper_controller/misc/: copy_startup_files.sh  enable_myrmex_controller.sh  load_myrmex_stop_controller.yaml  myrmex_controller.yaml
myrmex_gripper_controller/msg/: MyrmexControllerDebug.msg
myrmex_gripper_controller/scripts/: open_close.py  start_mm.py
myrmex_gripper_controller/src/: mm_sum.cpp
myrmex_gripper_controller/src/myrmex_gripper_controller/: myrmex_gripper_controller.cpp  myrmex_processor.cpp
optitrack_publisher/: CMakeLists.txt  README.md  package.xml  setup.py
optitrack_publisher/launch/: opti.launch
optitrack_publisher/scripts/: ot_node.py
optitrack_publisher/src/optitrack_publisher/: __init__.py  optitrack_publisher.py
placing_manager/: CMakeLists.txt  README.md  package.xml
placing_manager/config/: monitor_experiment.xml  tiago.rviz
placing_manager/include/manager/: manager.h  topic_buffer.h  torso.h
placing_manager/launch/: components.launch
placing_manager/py/: data_test.py  dataset_collection.py
placing_manager/scripts/: cm_interface.py  data_test.py  grasp_loop.py  open.py  setup_experiment.py  t_up.py  torso_loop.py
placing_manager/src/: node.cpp
placing_manager/src/manager/: manager.cpp  topic_buffer.cpp  torso.cpp
placing_manager/srv/: EstimatorPlacing.srv  ExecutePlacing.srv
state_estimation/: CMakeLists.txt  README.md  package.xml
state_estimation/config/: AT_settings.yaml  AT_tags.yaml  apriltag.rviz  calib_test.rviz  trafo_clean.rviz
state_estimation/launch/: apriltag.launch  headtags.launch  multicam_detection.launch  multicam_setup.launch  multicam_test.launch  onlycams.launch  onlyuvc.launch  tiagocam.launch
state_estimation/misc/: 36h11_45mm.xcf  calibration_sheet.xcf  copy_startup_files.sh  cuboid_markers.xcf  ft_contact_detection.yaml  start_contact_detection.yaml  start_tiago_cam.sh
state_estimation/msg/: BoolHead.msg  ObjectStateEstimate.msg
state_estimation/scripts/: ft_contact_detection.py  img.py  mm_contact_detection.py  object_state.py  opti_state.py  state_estimation.py  tag_transform.py  test_contact_detection.py
torso_stop_controller/: CMakeLists.txt  README.md  package.xml  torso_stop_controller_plugins.xml
torso_stop_controller/config/: torso_stop_controller.yaml
torso_stop_controller/include/: torso_stop_controller.h
torso_stop_controller/launch/: load_torso_controller.launch
torso_stop_controller/misc/: copy_startup_files.sh  enable_torso_controller.sh  jtc_inheritance.patch  load_torso_stop_controller.yaml  torso_controller.yaml
torso_stop_controller/src/: torso_stop_controller.cpp
wrist_motion/: CMakeLists.txt  README.md  package.xml  setup.py
wrist_motion/action/: PlanWrist.action
wrist_motion/config/: tiago.rviz
wrist_motion/launch/: tiago.launch  wrist.launch
wrist_motion/scripts/: ac_test.py  reorient_ac.py  reorient_loop.py
wrist_motion/src/wrist_motion/: __init__.py  marker.py  reorient.py  robot_model.py  tiago_controller.py
(+33 files in other folders)
