<?xml version="1.0"?>
<package format="2">
  <name>state_estimation</name>
  <version>0.0.1</version>
  
  <description>Object orientation estimation</description>
  <maintainer email="luca.lach@pal-robotics.com">Luca Lach</maintainer>

  <license>BSD</license>
  <author>Luca Lach</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
