<?xml version="1.0"?>
<package format="2">
  <name>torso_stop_controller</name>
  <version>0.0.1</version>
  
  <description>Torso controller that stops on table contact when moving downwards</description>
  <maintainer email="luca.lach@pal-robotics.com">Luca Lach</maintainer>

  <license>BSD</license>
  <author>Luca Lach</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>

  <export>
    <controller_interface plugin="${prefix}/torso_stop_controller_plugins.xml"/>
  </export>
</package>
